[gd_scene load_steps=8 format=2]

[ext_resource path="res://Globals/Settings.gd" type="Script" id=1]
[ext_resource path="res://Sounds/game_music.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/nom.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/bubble_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/sea_sound.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/water_click_sound.wav" type="AudioStream" id=7]

[node name="Settings" type="Control"]
script = ExtResource( 1 )

[node name="Music" type="Control" parent="."]

[node name="game_music" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource( 2 )

[node name="Sounds" type="Control" parent="."]

[node name="nom_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 3 )

[node name="bubble_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 4 )

[node name="gameover_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 5 )

[node name="sea_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 6 )

[node name="water_click_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 7 )

